[package]
name = "dowbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
url = "2.4.1"
